--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,10 +28,10 @@
         <input type="email" id="email" name="email" class="form-control" />
       </div>
 
-      <button type="submit" class="btn btn-primary">Cadastrar</button>
+      <button id="btn" type="submit" class="btn btn-dark">Cadastrar</button>
     </form>
-    <table class="table table-bordered border-primary">
-      <thead><tr>
+    <table class="table table-bordered mt-2">
+      <thead class="table-dark"><tr>
         <th scope="col">id</th>
         <th scope="col">Nome</th>
         <th scope="col">E-mail</th>
@@ -46,7 +46,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- <script src="/js/crateUser.js"></script> -->
+    <!-- <script src="/js/createUser.js"></script> -->
     <script>
       const form = document.querySelector("#form");
 
@@ -66,6 +66,11 @@
           console.log(error);
         }
       });
+      const btn = document.querySelector('#btn');
+
+      btn.addEventListener('click', async (event) => {
+        window.location.href='/'
+      })
     </script>
     <script>
       document.addEventListener("DOMContentLoaded", async (event) => {
